# portfolio-optimizer

./: .gitignore  README.md
.serena/: project.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260518_add_tickers_table.py  89ae883a069e_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: data.py  optimization.py  portfolios.py  risk.py  suggestions.py  tickers.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  optimization_result.py  portfolio.py  portfolio_asset.py  price_history.py  risk_metric.py  ticker.py
backend/app/repositories/: base.py  optimization_repo.py  portfolio_repo.py  price_repo.py  risk_repo.py  ticker_repo.py
backend/app/schemas/: data.py  optimization.py  portfolio.py  risk.py  suggestion.py  ticker.py
backend/app/services/: data_service.py  optimization_service.py  risk_service.py  suggestion_service.py  ticker_service.py
backend/app/tests/: conftest.py  test_portfolios.py
docs/: architecture.uml  research-journal-architecture.md  research-journal-architecture.tex
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  dataApi.ts  optimizationApi.ts  portfolioApi.ts  riskApi.ts
frontend/src/constants/: tickers.ts
frontend/src/pages/: BuilderPage.tsx  ComparePage.tsx  DashboardPage.tsx  RiskPage.tsx
frontend/src/store/: portfolioStore.ts
(+19 files in other folders)
