[project]
name = "finance-portfolio-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyportfolioopt>=1.6.0",
    "requests-cache>=1.3.1",
    "requests-ratelimiter>=0.10.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]

[tool.uv]
environments = ["sys_platform != 'win32'"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
